--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,7 +61,7 @@
     <div class="col">
       <label><b>Conversion</b></label>
       <div>
-        {{miles | convert: 'cm'}}
+        {{miles | convert: 'km' | number: '1.0-2'}}
       </div>
     </div>
   </div>
